app/src/main/java/com/example/truckercore/shared/errors/InvalidStateParameterException.kt
package com.example.truckercore.shared.errors

class InvalidStateParameterException(message: String? = null) : Exception(message)